--- a/.env
+++ b/.env
@@ -17,3 +17,16 @@
 APP_ENV=dev
 APP_SECRET=ffeaba3913ab1658ec9e1e21b8911ebb
 ###< symfony/framework-bundle ###
+
+
+DATABASE_URL="postgresql://postgres:rock4me!!@movyn-db:5432/movyn?serverVersion=12.19 (Debian 12.19-1.pgdg120+1)&charset=utf8"
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@movyn-db:5432/app?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
