--- a/.dev/php/Dockerfile
+++ b/.dev/php/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.3.9-fpm
 
 RUN apt-get update && apt-get install -y \
-    libpq-dev \
+    libpq-dev zip \
     && docker-php-ext-install pdo_pgsql
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
