--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,9 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Command\CountryETLCommand:
+        arguments:
+            - '%kernel.project_dir%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
